# Market_News_Project

./: .coveragerc  .env.example  .env.gdocs.example  .env.podcast  .env.podcast.example  .flake8  .gitignore  =2.28.0  DATABASE_ARCHITECTURE_GUIDE.md  DEPLOYMENT_CHECKLIST.md  ENHANCED_CONTENT_WORKFLOW.md  EXECUTION_CONDITION_PLAN.md  FUTURE_IMPROVEMENTS.md  GEMINI_API_USAGE_REPORT.md  GOOGLE_DRIVE_STORAGE_ISSUE_RESOLUTION_PLAN.md  Google_Docs_Auto_Overwrite_Implementation.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_REPORT.md  IMPROVEMENTS.md  ISSUE_4_COMPLETE_RESOLUTION_REPORT.md  NEXT_SESSION_GUIDE.md  PODCAST_PRODUCTION_IMPLEMENTATION_TASKS.md  PODCAST_PRODUCTION_REQUIREMENTS.md  PODCAST_PROGRESS_REPORT.md  PODCAST_SETUP_TASKS.md  PROJECT_FILES_GUIDE.md  Phase4_Completion_Report.md  README.md  REFACTORING_ANALYSIS_REPORT.md  RELIABILITY_IMPROVEMENT_PLAN.md  REQUIREMENTS_SPECIFICATION.md  SHARED_DRIVE_INTEGRATION_PLAN.md  SNS_CONTENT_IMPROVEMENT_README.md  ToDo.md  WORDCLOUD_IMPLEMENTATION_REPORT.md  ai_pro_summarizer.py  ai_summarizer.py  classify_article_region.py  cleanup_duplicates.py  comprehensive_tts_diagnostics.py  (+52 more)
.serena/: project.yml
cache/: latest_employment_data.json
config/: __init__.py  base.py  pronunciation_dict.yaml
data/: articles.json  integrated_summary.txt  social_topics_sample.json
docs/: API_SPECIFICATION.md  CHART_SPECIALIST_SPEC.md  CI_CD_OPERATIONS_GUIDE.md  CONTENT_EXPANSION_ROADMAP.md  DEPLOYMENT_GUIDE.md  ECON_INDICATOR_PROJECT.md  Google_Cloud_Console_OAuth2_Setup.md  MONITORING_GUIDE.md  NEXT_STEPS.md  OAuth2_Auth_Investigation.md  OAuth2_Troubleshooting_Guide.md  OPERATIONS_MANUAL.md  PODCAST_ENHANCEMENT_FUNCTIONAL_SPEC.md  PODCAST_ENHANCEMENT_REQUIREMENTS.md  PODCAST_ENHANCEMENT_ROADMAP.md  PODCAST_ENHANCEMENT_TASK_BREAKDOWN.md  PODCAST_ENHANCEMENT_TECHNICAL_SPEC.md  PODCAST_QUALITY_VERIFICATION_REPORT.md  (+12 more)
(+434 files in other folders)
